[package]
authors = ["Internet Security Research Group"]
name = "ppm-prototype"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde", "std"] }
color-eyre = "^0.5"
derivative = "2.1.1"
directories = "3.0.2"
hpke = { version = "0.7.1", features = ["default", "serde_impls", "std"] }
http = "^0.2"
prio = { path = "/home/timg/source/libprio-rs" }
rand = "0.8"
reqwest = { version = "0.11.4", features = ["rustls", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio = {version = "^1.9", features = ["full"]}
tracing = "^0.1"
tracing-error = "^0.1"
tracing-subscriber = "^0.2"
url = { version = "2.2.2", features = ["serde"] }
warp = { version = "^0.3", features = ["tls"] }
