[package]
authors = ["Internet Security Research Group"]
name = "ppm-prototype"
version = "0.1.0"
edition = "2018"

[dependencies]
assert_matches = "1.5.0"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = { version = "0.4", features = ["serde", "std"] }
color-eyre = "^0.5"
derivative = "2.1.1"
directories = "3.0.2"
hpke = { version = "^0.8", features = ["default", "serde_impls", "std"] }
hex = { version = "0.4.3", features = ["serde"] }
http = "^0.2"
http-api-problem = { version = "0.50.2", features = ["warp"] }
num_enum = "0.5.6"
prio = "0.7.0"
rand = "0.8"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serial_test = "0.5.1"
thiserror = "1.0"
tokio = {version = "^1.9", features = ["full"]}
tracing = "^0.1"
tracing-error = "^0.1"
tracing-subscriber = "^0.2"
url = { version = "2.2.2", features = ["serde"] }
warp = { version = "^0.3", features = ["tls"] }
